--- a/Seen/Seen/appsettings.json
+++ b/Seen/Seen/appsettings.json
@@ -1,8 +1,3 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  }
+  "ConnectionString": "User ID=postgres;Password=dum123;Host=localhost;Port=5432;Database=SEENDB;"
 }
