--- a/Seen/Seen/Properties/launchSettings.json
+++ b/Seen/Seen/Properties/launchSettings.json
@@ -12,14 +12,14 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Heroku"
       }
     },
     "Seen": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "heroku"
       },
       "applicationUrl": "http://localhost:21614/"
     }
