--- a/Seen/Seen/Properties/launchSettings.json
+++ b/Seen/Seen/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Heroku"
+        "ASPNETCORE_ENVIRONMENT": "Testing"
       }
     },
     "Seen": {
